# ship_chat

./: README.md  pyproject.toml  requirements.txt
cfg/: builder.yaml  user.yaml
scripts/: pull_models.sh
ship_chat/: chunk.py  cli.py  embed.py  ingest.py  rag.py  vector.py
